@startuml AI_RSS_01_Architecture_Overview
title AI增强RSS阅读器 - 01 总体架构一眼图

left to right direction
skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam componentStyle rectangle
skinparam defaultFontName Microsoft YaHei
skinparam defaultTextAlignment center
skinparam ArrowColor #334155
skinparam ArrowThickness 1.4
skinparam RectangleBorderColor #334155
skinparam RectangleFontColor #0F172A
skinparam ComponentBorderColor #334155
skinparam ComponentFontColor #0F172A
skinparam DatabaseBorderColor #0369A1
skinparam DatabaseBackgroundColor #E0F2FE
skinparam QueueBorderColor #B45309
skinparam QueueBackgroundColor #FEF3C7
skinparam NoteBackgroundColor #FFF7ED
skinparam NoteBorderColor #F97316

actor "用户" as User
cloud "外部 RSS 源" as RSS #EFF6FF
cloud "AI 模型 API\nXiaomi / OpenAI / DeepSeek" as LLM #F5F3FF

rectangle "A. React Web 前端" as FE #DCFCE7 {
  component "左侧 RSS 管理" as FE_Source
  component "中间文章流" as FE_Feed
  component "右侧阅读工作台" as FE_Reader
  component "Read / AI 双标签页" as FE_Tabs
}

rectangle "B. FastAPI 后端" as API #DBEAFE {
  component "RSS Sources API" as API_Source
  component "Articles API" as API_Article
  component "Analysis API" as API_Analysis
  component "抓取 / 去重服务" as FetchServices
}

queue "C. PostgreSQL 队列边界\narticle_analysis.status" as QueueBoundary

rectangle "D. PostgreSQL Worker" as Worker #FCE7F3 {
  component "db_worker.py" as DBWorker
  component "Structured Layer" as Structured
  component "Cognitive Layer" as Cognitive
  component "Decision Layer" as Decision
}

database "E. PostgreSQL" as DB {
  component "rss_sources" as DB_Source
  component "articles" as DB_Article
  component "article_analysis\n三层 JSONB 结果" as DB_Analysis
  component "reading_state / tags" as DB_State
}

User --> FE : 1. 浏览与操作
FE --> API : 2. HTTP API
API_Source --> FetchServices : 3. 手动抓取 RSS
FetchServices --> RSS : 4. 拉取 feed 与正文
FetchServices --> DB : 5. 新文章入库\nanalysis_status = pending
FE_Reader --> API_Article : 6. 读取全文内容
FE_Tabs --> API_Analysis : 7. 用户手动触发 analyze / reanalyze
API_Analysis --> QueueBoundary : 8. 标记 queued
QueueBoundary --> DBWorker : 9. 扫描 queued 任务
DBWorker --> LLM : 10. 调用真实模型
DBWorker --> DB : 11. 写入 structured / cognitive / decision
API_Article --> DB : 查询文章与阅读状态
API_Analysis --> DB : 查询分析状态与结果

legend right
|= 颜色 |= 职责 |
|<#DCFCE7> 绿色 | Web 前端 |
|<#DBEAFE> 蓝色 | HTTP 接口与同步业务 |
|<#FEF3C7> 黄色 | 数据库任务边界 |
|<#FCE7F3> 粉色 | AI Worker |
|<#E0F2FE> 浅蓝 | 持久化数据 |

关键原则：
1. 抓取后不自动分析
2. 用户先阅读，再决定是否做 AI 分析
3. 队列由 PostgreSQL 状态字段承担，不依赖 Redis / Celery
endlegend

@enduml

@startuml AI_RSS_02_Ingestion_To_Pending
title AI增强RSS阅读器 - 02 从 RSS 抓取到待分析文章

skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam defaultFontName Microsoft YaHei
skinparam ArrowColor #334155
skinparam activity {
  BackgroundColor #FFFFFF
  BorderColor #334155
  FontColor #0F172A
  DiamondBackgroundColor #FEF3C7
  DiamondBorderColor #B45309
  StartColor #16A34A
  EndColor #DC2626
}

start

partition "触发层" #E0F2FE {
  :1. 用户手动 POST /rss-sources/{id}/fetch;
}

partition "抓取层" #DBEAFE {
  :2. 读取 rss_sources;
  :3. feedparser 解析 RSS entries;
  :4. trafilatura 提取正文 content;
}

partition "入库层" #DCFCE7 {
  :5. 计算 url_hash / content_hash;
  if (6. 是否重复?) then (重复)
    :跳过文章;
  else (新文章)
    :7. INSERT articles;
    :8. analysis_status = pending;
  endif
}

partition "结果返回" #FEF3C7 {
  :9. 返回 fetched_count / inserted_count;
  :10. queued_analysis_count = 0;
}

stop

note right
当前设计中：
- 抓取后不自动创建分析任务
- 是否分析由用户在前端阅读后决定
end note

@enduml

@startuml AI_RSS_03_Manual_AI_Three_Layers
title AI增强RSS阅读器 - 03 手动 AI 分析与三层输出

left to right direction
skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam componentStyle rectangle
skinparam defaultFontName Microsoft YaHei
skinparam ArrowColor #334155
skinparam ArrowThickness 1.4
skinparam ComponentBorderColor #334155
skinparam ComponentFontColor #0F172A
skinparam NoteBackgroundColor #FFF7ED
skinparam NoteBorderColor #F97316

database "articles" as Articles #E0F2FE
component "POST /api/articles/{id}/analyze\n或 /reanalyze" as AnalyzeAPI #FEF3C7
component "db_worker.py\n扫描 queued 任务" as Worker #FEF3C7

component "1. Structured Layer\n\n输入：原文 + 元数据\n输出：structured_result" as L1 #DCFCE7
component "2. Cognitive Layer\n\n输入：structured + 原文\n输出：cognitive_result" as L2 #DBEAFE
component "3. Decision Layer\n\n输入：structured + cognitive\n输出：decision_result" as L3 #FCE7F3

database "article_analysis" as Analysis #E0F2FE {
  component "structured_result JSONB" as SR
  component "cognitive_result JSONB" as CR
  component "decision_result JSONB" as DR
  component "status / task_id / error" as META
}

Articles --> AnalyzeAPI : 用户决定开始分析
AnalyzeAPI --> Analysis : status = queued
Analysis --> Worker : 扫描 queued
Worker --> L1
L1 --> L2 : structured_result
L2 --> L3 : cognitive_result
L3 --> Analysis : UPSERT 三层结果

note bottom of Worker
状态流转：
pending -> queued -> processing -> completed
failed 时保留 error_message，并允许用户重试。
end note

@enduml

@startuml AI_RSS_04_Backend_Modules
title AI增强RSS阅读器 - 04 后端模块分层图

top to bottom direction
skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam componentStyle rectangle
skinparam defaultFontName Microsoft YaHei
skinparam ArrowColor #334155
skinparam PackageBorderColor #334155
skinparam PackageBackgroundColor #FFFFFF
skinparam ComponentBorderColor #334155
skinparam ComponentFontColor #0F172A

package "入口层" #DBEAFE {
  component "main.py\nFastAPI app" as Main
}

package "HTTP 路由层 routers/" #E0F2FE {
  component "rss.py\n/rss-sources" as RssRouter
  component "articles.py\n/articles" as ArticleRouter
  component "analysis.py\n/analyze / reanalyze / analysis" as AnalysisRouter
}

package "业务服务层 services/" #DCFCE7 {
  component "rss_fetcher.py\nRSS 解析与入库" as Fetcher
  component "content_extractor.py\n正文提取" as Extractor
  component "deduplication.py\n去重与 hash" as Dedup
  component "analysis.py\n手动分析入口" as AnalysisService
  component "analysis_queue.py\n状态流转与结果写库" as AnalysisQueue
}

package "异步执行层 workers/" #FEF3C7 {
  component "db_worker.py\n扫描 queued 任务" as DBWorker
}

package "AI 领域层 ai/" #FCE7F3 {
  component "pipeline.py\n三层编排" as Pipeline
  component "structured_layer.py" as Structured
  component "cognitive_layer.py" as Cognitive
  component "decision_layer.py" as Decision
  component "providers.py\nXiaomi / OpenAI / DeepSeek" as Providers
  component "prompts.py" as Prompts
}

package "数据层" #E0F2FE {
  component "models/\nSQLAlchemy 模型" as Models
  component "schemas/\nPydantic DTO" as Schemas
  database "PostgreSQL" as DB
}

Main --> RssRouter
Main --> ArticleRouter
Main --> AnalysisRouter
RssRouter --> Fetcher
ArticleRouter --> Models
AnalysisRouter --> AnalysisService
Fetcher --> Extractor
Fetcher --> Dedup
Dedup --> Models
AnalysisService --> AnalysisQueue
DBWorker --> AnalysisQueue
AnalysisQueue --> Pipeline
Pipeline --> Structured
Structured --> Cognitive
Cognitive --> Decision
Structured --> Providers
Cognitive --> Providers
Decision --> Providers
Providers --> Prompts
Models --> DB
Schemas ..> RssRouter
Schemas ..> ArticleRouter
Schemas ..> AnalysisRouter

legend right
实现约束：
1. 抓取服务不自动投递 AI
2. Analysis API 负责手动开始分析
3. db_worker.py 是唯一的后台消费入口
4. ai/pipeline.py 负责三层编排
endlegend

@enduml

@startuml AI_RSS_05_Data_Model
title AI增强RSS阅读器 - 05 数据模型与三层结果存储

skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam defaultFontName Microsoft YaHei
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #334155
  FontColor #0F172A
  AttributeFontColor #334155
}
hide methods
hide circle

class rss_sources #E0F2FE {
  +id: SERIAL <<PK>>
  --
  name: VARCHAR(255)
  url: TEXT <<UNIQUE>>
  category: VARCHAR(100)
  enabled: BOOLEAN
  fetch_interval_minutes: INT
  last_fetch_time: TIMESTAMP
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

class articles #DCFCE7 {
  +id: SERIAL <<PK>>
  --
  source_id: INT <<FK>>
  title: TEXT
  url: TEXT <<UNIQUE>>
  author: VARCHAR(255)
  published_at: TIMESTAMP
  summary: TEXT
  content: TEXT
  url_hash: VARCHAR(64)
  content_hash: VARCHAR(64)
  language: VARCHAR(20)
  analysis_status: VARCHAR(30)
  created_at: TIMESTAMP
}

class article_analysis #FCE7F3 {
  +id: SERIAL <<PK>>
  --
  article_id: INT <<FK, UNIQUE>>
  structured_result: JSONB
  cognitive_result: JSONB
  decision_result: JSONB
  status: VARCHAR(30)
  error_message: TEXT
  model_provider: VARCHAR(50)
  model_name: VARCHAR(100)
  task_id: VARCHAR(255)
  priority_level: VARCHAR(30)
  recommended_action: VARCHAR(30)
  sentiment: VARCHAR(30)
  importance_score: INT
  analyzed_at: TIMESTAMP
  updated_at: TIMESTAMP
}

class user_reading_state #FEF3C7 {
  +id: SERIAL <<PK>>
  --
  article_id: INT <<FK>>
  is_read: BOOLEAN
  is_saved: BOOLEAN
  is_archived: BOOLEAN
  read_at: TIMESTAMP
  created_at: TIMESTAMP
}

class tags #F1F5F9 {
  +id: SERIAL <<PK>>
  --
  name: VARCHAR(100) <<UNIQUE>>
}

class article_tags #F1F5F9 {
  +article_id: INT <<PK, FK>>
  +tag_id: INT <<PK, FK>>
}

rss_sources "1" --> "0..*" articles : owns
articles "1" --> "0..1" article_analysis : manual AI result
articles "1" --> "0..1" user_reading_state : read/save/archive
articles "1" --> "0..*" article_tags
tags "1" --> "0..*" article_tags

note right of articles
analysis_status：
- pending
- queued
- processing
- completed
- failed
end note

note right of article_analysis
这是 AI 结果唯一落点：
- structured_result
- cognitive_result
- decision_result

列表摘要字段来自这里，
完整三层细节也从这里读取。
end note

@enduml

@startuml AI_RSS_06_Frontend_Layout
title AI增强RSS阅读器 - 06 前端阅读工作台结构

left to right direction
skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam componentStyle rectangle
skinparam defaultFontName Microsoft YaHei
skinparam ArrowColor #334155
skinparam RectangleBorderColor #334155
skinparam RectangleFontColor #0F172A
skinparam ComponentBorderColor #334155
skinparam ComponentFontColor #0F172A

actor "用户" as User

rectangle "左侧：RSS 管理\n宽度约 320px" as Left #E0F2FE {
  component "RSS 源列表" as SourceList
  component "新增 RSS 源表单" as CreateSource
  component "分类筛选" as CategoryFilter
  component "抓取 / 启用 / 禁用 / 删除" as SourceActions
}

rectangle "中间：文章流\n主工作区" as Center #DCFCE7 {
  component "搜索与筛选条" as SearchBar
  component "文章卡片列表" as Cards
  component "analysis_status 标记\npending/queued/processing/completed/failed" as StatusBadge
  component "priority / action / sentiment 摘要" as PriorityBadge
}

rectangle "右侧：阅读工作台\n宽度约 520px" as Right #FCE7F3 {
  component "Read 标签页\n显示全文正文" as ReadTab
  component "字体大小调节" as FontControls
  component "AI 标签页\nStart analysis / Reanalyze" as AITab
  component "Structured / Cognitive / Decision 结果" as LayerViews
}

User --> Left : 管理 RSS 源
User --> Center : 选择文章
Center --> Right : 当前 article_id
Right --> Center : 更新 analysis_status 与摘要字段

note bottom of Right
右侧不是纯摘要面板，而是阅读器：
1. 先显示完整正文
2. 用户主动决定是否触发 AI 分析
3. AI 标签页中再展示三层结果
end note

@enduml

@startuml AI_RSS_07_API_Contract
title AI增强RSS阅读器 - 07 API 设计变化

skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam defaultFontName Microsoft YaHei
skinparam componentStyle rectangle
skinparam RectangleBorderColor #334155
skinparam RectangleFontColor #0F172A
skinparam NoteBackgroundColor #FFFFFF
skinparam NoteBorderColor #334155

rectangle "RSS Sources API" as RSS #E0F2FE
rectangle "Articles API" as Articles #DCFCE7
rectangle "Analysis API" as Analysis #FCE7F3
database "PostgreSQL" as DB #E0F2FE

RSS --> DB : CRUD rss_sources
Articles --> DB : 读文章与阅读状态
Analysis --> DB : 手动写 queued / 读三层结果

note right of RSS
GET    /api/rss-sources
POST   /api/rss-sources
PUT    /api/rss-sources/{id}
DELETE /api/rss-sources/{id}

POST   /api/rss-sources/{id}/fetch
返回：
{
  fetched_count,
  inserted_count,
  queued_analysis_count: 0
}
end note

note right of Articles
GET  /api/articles
列表字段：
- analysis_status
- priority_level
- recommended_action
- sentiment

GET  /api/articles/{id}
返回全文 content

POST /api/articles/{id}/save
POST /api/articles/{id}/archive
end note

note right of Analysis
GET  /api/articles/{id}/analysis
GET  /api/articles/{id}/analysis/status

POST /api/articles/{id}/analyze
首次手动分析

POST /api/articles/{id}/reanalyze
已有结果后重跑

返回：
{
  task_id,
  status: "queued"
}
end note

@enduml

@startuml AI_RSS_08_Analysis_Status_State
title AI增强RSS阅读器 - 08 AI 分析状态机

skinparam backgroundColor #F8FAFC
skinparam shadowing false
skinparam defaultFontName Microsoft YaHei
skinparam state {
  BackgroundColor #FFFFFF
  BorderColor #334155
  FontColor #0F172A
  StartColor #16A34A
  EndColor #DC2626
}

state pending #E2E8F0
state queued #FEF3C7
state processing #DBEAFE
state completed #DCFCE7
state failed #FEE2E2

[*] --> pending : 文章抓取并入库
pending --> queued : 用户点击 analyze
queued --> processing : db_worker 领取任务
processing --> completed : 三层 JSON 全部写入
processing --> failed : 模型错误 / JSON 无效 / 入库失败
failed --> queued : 用户重试 reanalyze
completed --> queued : 用户手动 reanalyze
completed --> [*]

note right of pending
pending 表示：
文章可读，但尚未请求 AI 分析。
end note

note right of completed
completed 必须满足：
structured_result 非空
cognitive_result 非空
decision_result 非空
end note

note right of failed
failed 必须保留：
error_message
task_id
updated_at
end note

@enduml
